# Stealthometer

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/: FUNDING.yml
.github/workflows/: build.yml
cmake/: setup-zhmmodsdk.cmake
data/: npc.json  repo.json
src/: Config.h  Enums.h  EventSystem.cpp  EventSystem.h  Events.h  FixMinMax.h  LiveSplitClient.cpp  LiveSplitClient.h  MyMod.cpp  MyMod.h  PlayStyleRating.h  Rating.h  Resources.h  RunData.h  StatWindow.cpp  StatWindow.h  Stats.h  Stealthometer.cpp  Stealthometer.h  util.h
